# image-treatment

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GITHUB_UPLOAD_INSTRUCTIONS.md  QUICK_START_GITHUB.md  README.md  check_setup.ps1  upload_to_github.ps1
include/: ImageSource.h  Treatment.h  TreatmentChain.h
include/treatments/: BrightnessTreatment.h  CannyEdgeTreatment.h  DilationTreatment.h  ErosionTreatment.h  GaussianBlurTreatment.h  GrayscaleTreatment.h  MedianBlurTreatment.h  MosaicTreatment.h  SharpenTreatment.h  ThresholdTreatment.h
src/: test_webcam.cpp
